// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select[Base] should render correctly  1`] = `
<div>
  <div
    class="cxszxtq soui-select-wrapper-empty c-uhw2up soui-select-wrapper c7htb1f soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cchy1ep soui-select-result"
      >
        <div
          class="cwqxflx soui-select-result-text-wrapper"
        >
          <span
            class="c-cun98x soui-select-placeholder cfhw311 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about absolute 1`] = `
<div
  style="padding: 10px; height: 100px; width: 100%; overflow: hidden;"
>
  <div
    class="cxszxtq soui-select-wrapper-empty c-uhw2up soui-select-wrapper c7htb1f soui-select-clearable"
    data-soui-input-border="true"
    style="width: 120px;"
    tabindex="0"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cchy1ep soui-select-result"
      >
        <div
          class="cwqxflx soui-select-result-text-wrapper"
        >
          <span
            class="c-cun98x soui-select-placeholder cfhw311 soui-select-ellipsis"
          >
            <span>
              default
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="cxszxtq soui-select-wrapper-empty c-uhw2up soui-select-wrapper c7htb1f soui-select-clearable cn6td3o soui-select-multiple"
    data-soui-input-border="true"
    style="width: 300px; margin-left: 16px;"
    tabindex="0"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cchy1ep soui-select-result"
      >
        <div
          class="cwqxflx soui-select-result-text-wrapper cfhcqyq soui-select-multiple-result-wrapper"
        >
          <span
            class="c-cun98x soui-select-placeholder cfhw311 soui-select-ellipsis"
          >
            <span>
              Select user
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about autoAdapt 1`] = `
<div>
  <div
    class="cxszxtq soui-select-wrapper-empty c-uhw2up soui-select-wrapper c7htb1f soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cchy1ep soui-select-result"
      >
        <div
          class="cwqxflx soui-select-result-text-wrapper"
        >
          <span
            class="c-cun98x soui-select-placeholder cfhw311 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about big data 1`] = `
<div>
  <div
    class="cxszxtq soui-select-wrapper-empty c-uhw2up soui-select-wrapper c7htb1f soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cchy1ep soui-select-result"
      >
        <div
          class="cwqxflx soui-select-result-text-wrapper"
        >
          <span
            class="c-cun98x soui-select-placeholder cfhw311 soui-select-ellipsis"
          >
            <span>
              Select Tag
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about create 1`] = `
<div>
  <div
    class="cxszxtq soui-select-wrapper-empty c-uhw2up soui-select-wrapper c7htb1f soui-select-clearable cn6td3o soui-select-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cchy1ep soui-select-result"
      >
        <div
          class="cwqxflx soui-select-result-text-wrapper cfhcqyq soui-select-multiple-result-wrapper"
        >
          <span
            class="c-cun98x soui-select-placeholder cfhw311 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about custom render 1`] = `
<div
  style="display: flex; gap: 24px; flex-wrap: wrap;"
>
  <div
    class="cxszxtq soui-select-wrapper-empty c-uhw2up soui-select-wrapper c7htb1f soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cchy1ep soui-select-result"
      >
        <div
          class="cwqxflx soui-select-result-text-wrapper"
        >
          <span
            class="c-cun98x soui-select-placeholder cfhw311 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="cxszxtq soui-select-wrapper-empty c-uhw2up soui-select-wrapper c7htb1f soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cchy1ep soui-select-result"
      >
        <div
          class="cwqxflx soui-select-result-text-wrapper"
        >
          <span
            class="c-cun98x soui-select-placeholder cfhw311 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="cxszxtq soui-select-wrapper-empty c-uhw2up soui-select-wrapper c7htb1f soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cchy1ep soui-select-result"
      >
        <div
          class="cwqxflx soui-select-result-text-wrapper"
        >
          <span
            class="c-cun98x soui-select-placeholder cfhw311 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about custom result 1`] = `
<div>
  <div
    class="cxszxtq soui-select-wrapper-empty c-uhw2up soui-select-wrapper c7htb1f soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cchy1ep soui-select-result"
      >
        <div
          class="cwqxflx soui-select-result-text-wrapper"
        >
          <span
            class="c-cun98x soui-select-placeholder cfhw311 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about custom unmatch 1`] = `
<div>
  <div
    class="c-uhw2up soui-select-wrapper c7htb1f soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cchy1ep soui-select-result"
      >
        <div
          class="cwqxflx soui-select-result-text-wrapper"
        >
          <span
            class="cfhw311 soui-select-ellipsis"
          >
            I am redddd color
          </span>
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="c7he06a soui-select-clear-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 23C5.924 23 1 18.076 1 12C1 5.924 5.924 1 12 1C18.076 1 23 5.924 23 12C23 18.076 18.076 23 12 23Z"
              fill="currentColor"
            />
            <path
              d="M9.6129 8.2097C9.22061 7.90468 8.65338 7.93241 8.29289 8.29289C7.90237 8.68342 7.90237 9.31658 8.29289 9.70711L10.413 11.828L8.29289 13.9497L8.2097 14.044C7.90468 14.4362 7.93241 15.0035 8.29289 15.364C8.68342 15.7545 9.31658 15.7545 9.70711 15.364L11.828 13.242L13.9497 15.364L14.044 15.4471C14.4362 15.7522 15.0035 15.7244 15.364 15.364C15.7545 14.9734 15.7545 14.3403 15.364 13.9497L13.242 11.828L15.364 9.70711L15.4471 9.6129C15.7522 9.22061 15.7244 8.65338 15.364 8.29289C14.9734 7.90237 14.3403 7.90237 13.9497 8.29289L11.828 10.413L9.70711 8.29289L9.6129 8.2097Z"
              fill="white"
            />
          </svg>
        </span>
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about disabled 1`] = `
<div
  style="display: flex; flex-wrap: wrap; gap: 24px; width: 624px;"
>
  <div
    class="cxszxtq soui-select-wrapper-empty c-uhw2up soui-select-wrapper c8cbiuj soui-select-wrapper-disabled c7htb1f soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cchy1ep soui-select-result"
      >
        <div
          class="cwqxflx soui-select-result-text-wrapper"
        >
          <span
            class="c-cun98x soui-select-placeholder cfhw311 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="cxszxtq soui-select-wrapper-empty c-uhw2up soui-select-wrapper c7htb1f soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cchy1ep soui-select-result"
      >
        <div
          class="cwqxflx soui-select-result-text-wrapper"
        >
          <span
            class="c-cun98x soui-select-placeholder cfhw311 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="c-uhw2up soui-select-wrapper c8cbiuj soui-select-wrapper-disabled c7htb1f soui-select-clearable cn6td3o soui-select-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cchy1ep soui-select-result"
      >
        <div
          class="cwqxflx soui-select-result-text-wrapper c4aziku soui-select-compressed-wrapper cfhcqyq soui-select-multiple-result-wrapper c4un44e soui-select-multiple-compressed-wrapper"
        >
          <div
            class="c-lp7ca soui-select-tag cw08yvc soui-tag-tag csmbay7 soui-tag-default c-8zllf8 soui-tag-bright cso3sr2 soui-tag-disabled"
            data-soui-type="dark"
            style="opacity: 1;"
          >
            <div
              class="ctgi2dd soui-tag-wrapper c-5qfggl soui-tag-inline"
            >
              <span
                class="cwqtqen soui-tag-container"
              >
                red
              </span>
            </div>
            <div
              class="cvk1jwf soui-tag-close-icon"
            >
              <span
                class="c-cai9nw soui-tag-close-icon-wrapper"
              >
                <svg
                  height="10"
                  viewBox="0 0 10 10"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="c-lp7ca soui-select-tag cw08yvc soui-tag-tag csmbay7 soui-tag-default c-8zllf8 soui-tag-bright cso3sr2 soui-tag-disabled"
            data-soui-type="dark"
            style="opacity: 1;"
          >
            <div
              class="ctgi2dd soui-tag-wrapper c-5qfggl soui-tag-inline"
            >
              <span
                class="cwqtqen soui-tag-container"
              >
                orange
              </span>
            </div>
            <div
              class="cvk1jwf soui-tag-close-icon"
            >
              <span
                class="c-cai9nw soui-tag-close-icon-wrapper"
              >
                <svg
                  height="10"
                  viewBox="0 0 10 10"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <span
            style="display: inline-flex;"
          >
            <div
              class="c-lp7ca soui-select-tag cw08yvc soui-tag-tag csmbay7 soui-tag-default c-8zllf8 soui-tag-bright"
              style="position: absolute; z-index: -100; user-select: none; contain: layout; opacity: 0; pointer-events: none;"
            >
              <span
                class="ctgi2dd soui-tag-wrapper"
              >
                +
              </span>
            </div>
            <noscript />
          </span>
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="c-uhw2up soui-select-wrapper c7htb1f soui-select-clearable cn6td3o soui-select-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cchy1ep soui-select-result"
      >
        <div
          class="cwqxflx soui-select-result-text-wrapper c4aziku soui-select-compressed-wrapper cfhcqyq soui-select-multiple-result-wrapper c4un44e soui-select-multiple-compressed-wrapper"
        >
          <div
            class="c-lp7ca soui-select-tag cw08yvc soui-tag-tag csmbay7 soui-tag-default c-8zllf8 soui-tag-bright"
            style="opacity: 1;"
          >
            <div
              class="ctgi2dd soui-tag-wrapper c-5qfggl soui-tag-inline"
            >
              <span
                class="cwqtqen soui-tag-container"
              >
                red
              </span>
            </div>
            <div
              class="cvk1jwf soui-tag-close-icon"
            >
              <span
                class="c-cai9nw soui-tag-close-icon-wrapper"
              >
                <svg
                  height="10"
                  viewBox="0 0 10 10"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="c-lp7ca soui-select-tag cw08yvc soui-tag-tag csmbay7 soui-tag-default c-8zllf8 soui-tag-bright cso3sr2 soui-tag-disabled"
            style="opacity: 1;"
          >
            <div
              class="ctgi2dd soui-tag-wrapper c-5qfggl soui-tag-inline"
            >
              <span
                class="cwqtqen soui-tag-container"
              >
                orange
              </span>
            </div>
            <div
              class="cvk1jwf soui-tag-close-icon"
            >
              <span
                class="c-cai9nw soui-tag-close-icon-wrapper"
              >
                <svg
                  height="10"
                  viewBox="0 0 10 10"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <span
            style="display: inline-flex;"
          >
            <div
              class="c-lp7ca soui-select-tag cw08yvc soui-tag-tag csmbay7 soui-tag-default c-8zllf8 soui-tag-bright"
              style="position: absolute; z-index: -100; user-select: none; contain: layout; opacity: 0; pointer-events: none;"
            >
              <span
                class="ctgi2dd soui-tag-wrapper"
              >
                +
              </span>
            </div>
            <noscript />
          </span>
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="c7he06a soui-select-clear-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 23C5.924 23 1 18.076 1 12C1 5.924 5.924 1 12 1C18.076 1 23 5.924 23 12C23 18.076 18.076 23 12 23Z"
              fill="currentColor"
            />
            <path
              d="M9.6129 8.2097C9.22061 7.90468 8.65338 7.93241 8.29289 8.29289C7.90237 8.68342 7.90237 9.31658 8.29289 9.70711L10.413 11.828L8.29289 13.9497L8.2097 14.044C7.90468 14.4362 7.93241 15.0035 8.29289 15.364C8.68342 15.7545 9.31658 15.7545 9.70711 15.364L11.828 13.242L13.9497 15.364L14.044 15.4471C14.4362 15.7522 15.0035 15.7244 15.364 15.364C15.7545 14.9734 15.7545 14.3403 15.364 13.9497L13.242 11.828L15.364 9.70711L15.4471 9.6129C15.7522 9.22061 15.7244 8.65338 15.364 8.29289C14.9734 7.90237 14.3403 7.90237 13.9497 8.29289L11.828 10.413L9.70711 8.29289L9.6129 8.2097Z"
              fill="white"
            />
          </svg>
        </span>
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about filter 1`] = `
<div>
  <div
    class="cxszxtq soui-select-wrapper-empty c-uhw2up soui-select-wrapper c7htb1f soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cchy1ep soui-select-result"
      >
        <div
          class="cwqxflx soui-select-result-text-wrapper"
        >
          <input
            autocomplete="off"
            placeholder="Select Color"
            style="width: 100%;"
            value=""
          />
          <span
            class="c-utb7x7 soui-select-input-mirror"
          />
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about format 1`] = `
<div>
  <div
    class="cxszxtq soui-select-wrapper-empty c-uhw2up soui-select-wrapper c7htb1f soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cchy1ep soui-select-result"
      >
        <div
          class="cwqxflx soui-select-result-text-wrapper"
        >
          <span
            class="c-cun98x soui-select-placeholder cfhw311 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about group 1`] = `
<div
  class="cxszxtq soui-select-wrapper-empty c-uhw2up soui-select-wrapper c7htb1f soui-select-clearable"
  data-soui-input-border="true"
  style="width: 240px;"
  tabindex="0"
>
  <div
    class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
  >
    <div
      class="cchy1ep soui-select-result"
    >
      <div
        class="cwqxflx soui-select-result-text-wrapper"
      >
        <span
          class="c-cun98x soui-select-placeholder cfhw311 soui-select-ellipsis"
        >
          <span>
            Select a city
          </span>
        </span>
      </div>
    </div>
    <div
      class="c-6xycdm soui-select-icon-wrapper"
    >
      <span
        class="cbj7xni soui-select-arrow-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about inner title 1`] = `
<div>
  <div
    class="cxszxtq soui-select-wrapper-empty c-uhw2up soui-select-wrapper culutu9 soui-select-wrapper-inner-title c7htb1f soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cbjw0q soui-inner-title-wrapper"
      >
        <div
          class="cn8e5i7 soui-inner-title-title c124f8c soui-inner-title-top"
        >
          Select Color
        </div>
        <div
          class="cn68hse soui-inner-title-place"
        >
          <div
            class="cn8e5i7 soui-inner-title-title"
          >
            Select Color
          </div>
        </div>
        <div
          class="c-abus00 soui-inner-title-content"
        >
          <div
            class="cchy1ep soui-select-result"
          >
            <div
              class="cwqxflx soui-select-result-text-wrapper"
            >
              <div
                class="c-b16sqm soui-select-space"
              >
                 
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about loading 1`] = `
<div>
  <div
    class="cxszxtq soui-select-wrapper-empty c-uhw2up soui-select-wrapper c7htb1f soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cchy1ep soui-select-result"
      >
        <div
          class="cwqxflx soui-select-result-text-wrapper"
        >
          <span
            class="c-cun98x soui-select-placeholder cfhw311 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about multiple 1`] = `
<div>
  <div
    class="cxszxtq soui-select-wrapper-empty c-uhw2up soui-select-wrapper c7htb1f soui-select-clearable cn6td3o soui-select-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cchy1ep soui-select-result"
      >
        <div
          class="cwqxflx soui-select-result-text-wrapper cfhcqyq soui-select-multiple-result-wrapper"
        >
          <span
            class="c-cun98x soui-select-placeholder cfhw311 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about size 1`] = `
<div
  style="display: flex; gap: 24px; align-items: center;"
>
  <div
    class="cxszxtq soui-select-wrapper-empty c-uhw2up soui-select-wrapper cy0oqt4 soui-select-wrapper-small c7htb1f soui-select-clearable"
    data-soui-input-border="true"
    style="width: 240px;"
    tabindex="0"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cchy1ep soui-select-result"
      >
        <div
          class="cwqxflx soui-select-result-text-wrapper"
        >
          <span
            class="c-cun98x soui-select-placeholder cfhw311 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="cxszxtq soui-select-wrapper-empty c-uhw2up soui-select-wrapper c7htb1f soui-select-clearable"
    data-soui-input-border="true"
    style="width: 240px;"
    tabindex="0"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cchy1ep soui-select-result"
      >
        <div
          class="cwqxflx soui-select-result-text-wrapper"
        >
          <span
            class="c-cun98x soui-select-placeholder cfhw311 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="cxszxtq soui-select-wrapper-empty c-uhw2up soui-select-wrapper cxwmvak soui-select-wrapper-large c7htb1f soui-select-clearable"
    data-soui-input-border="true"
    style="width: 240px;"
    tabindex="0"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cchy1ep soui-select-result"
      >
        <div
          class="cwqxflx soui-select-result-text-wrapper"
        >
          <span
            class="c-cun98x soui-select-placeholder cfhw311 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about tree 1`] = `
<div>
  <div
    class="cxszxtq soui-select-wrapper-empty c-uhw2up soui-select-wrapper c7htb1f soui-select-clearable"
    data-soui-input-border="true"
    style="width: 260px;"
    tabindex="0"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cchy1ep soui-select-result"
      >
        <div
          class="cwqxflx soui-select-result-text-wrapper"
        >
          <span
            class="c-cun98x soui-select-placeholder cfhw311 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about tree more 1`] = `
<div>
  <div
    class="cxszxtq soui-select-wrapper-empty c-uhw2up soui-select-wrapper c7htb1f soui-select-clearable"
    data-soui-input-border="true"
    style="width: 260px;"
  >
    <div
      class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cchy1ep soui-select-result"
      >
        <div
          class="cwqxflx soui-select-result-text-wrapper"
        >
          <input
            autocomplete="off"
            placeholder="Select Color"
            style="width: 100%;"
            value=""
          />
          <span
            class="c-utb7x7 soui-select-input-mirror"
          />
        </div>
      </div>
      <div
        class="c-6xycdm soui-select-icon-wrapper"
      >
        <span
          class="cbj7xni soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
